--- a/style.css
+++ b/style.css
@@ -199,6 +199,111 @@
     background: black;
     transform: translateX(-50%);
 
+}
+.skills .skills-content{
+     display: flex;
+     flex-wrap: wrap;
+     align-items: center;
+     justify-content: space-between;
+ }
+ .skills .skills-content .left{
+     width: 40%;
+ }
+ .skills .skills-content .text{
+     font-size: 20px;
+     font-weight: 600;
+ }
+
+ .skills .skills-content li{
+     border-style: solid;
+     border-color: crimson;
+     border-radius: 15px;
+     justify-content: center;
+     padding: 5px;
+     margin-top: 5px;
+     margin-bottom: 5px;
+     text-align: center;
+
+ }
+ .skills .right{
+     width: 45%;
+ }
+ .skillset #sk{
+     display: inline-block;
+     border-style: dotted;
+     border-color:crimson;
+     padding: 5px;
+     margin: 3px;
+ }
+
+
+ /* Contact Section styling */
+ .contact .title{
+    position: relative;
+     font-family: 'Ubuntu', sans-serif;
+     font-size: 40px;
+     font-weight: 500;
+     margin-bottom: 60px;
+     padding-bottom: 20px;
+     text-align: center;
+}
+.contact .title::before{
+    content: " ";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: black;
+    transform: translateX(-50%);
+
+}
+.contact .contact-content .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.contact .contact-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.contact .contact-content .column{
+    width: calc(50% -30px);
+}
+.contact .contact-content .left p{
+    text-align: justify;
+}
+.contact .contact-content .left .icons{
+    margin: 10px 0;
+}
+.contact .contact-content .row{
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+.contact .contact-content .row .info{
+    margin-left: 30px;
+}
+.contact .contact-content .row i{
+    font-size: 25px;
+    color: crimson;
+}
+.contact .contact-content .info .head{
+    font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /* Resposive media starts */
  @media(max-width: 1104px){
